# bud

./: .gitignore  Cargo.toml  README.md  index.js  package.json  pnpm-lock.yaml
.cargo/: config.toml
.claude/: CLAUDE.md  settings.local.json
.claude/skills/rust-best-practices/: SKILL.md
.githooks/: pre-push
crates/config/: Cargo.toml
crates/config/src/: common.rs  core.rs  lib.rs  plugin.rs
crates/config/tests/: integration_tests.rs  plugin_permissions_tests.rs
crates/config/tests/fixtures/: bud.json  config.json  plugin.json
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/plugin/: manager.rs  mod.rs
crates/core/tests/: manager_tests.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: config.rs  lib.rs  plugin.rs  provider.rs
crates/test-harness/: Cargo.toml  bud.json
crates/test-harness/src/: main.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  provider_json.rs
crates/wasm-provider/: Cargo.toml
crates/wasm-provider/src/: lib.rs
crates/xtask/src/: main.rs
doc/: README.md  core-concepts.md
example/sum-plugin/: Cargo.toml  main.wasm  plugin.json
example/sum-plugin/src/: lib.rs
example/test-plugin/: main.wasm  plugin.json
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/rust/wit/: bud.wit
wit/: bud.wit
