# [dependencies]
# # Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
# napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
# napi-derive = "2.12.2"
# zmq = "0.10.0"

# [build-dependencies]
# napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
log = "0.4.14"
thiserror = "2.0.16"
test-log = "0.2"
