[package]
name    = "config"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
shared-types = { path = "../shared-types" }
jsonschema = "0.17.1"
once_cell = "1.19.0"
log = { workspace = true }

[dev-dependencies]