[package]
name = "wasm-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
shared-types = { path = "../shared-types" }
utils = { path = "../utils" }
wasmtime = { version = "41", features = ["component-model"] }
wasmtime-wasi = "41.0.3"

[lib]
path = "src/lib.rs"